# secure-network-interface-with-sgx

./: .gitattributes  .gitignore  README.md  build.sh  launch_permanent_mode.sh  performance_eval_client.py  run_tests_locally.sh
common/: key_file_definitions.h  logging.h  netutils.c  netutils.h  pn_definitions.h  snmp_definitions.h  tcp_definitions.h  utils.c  utils.h
doc/: main.md
packet_validation/: arp_validation.c  edl_types.h  ip_validation.c  iso_tcp_validation.c  iso_tcp_validation.h  key_installation.c  key_loader.c  macsec.c  macsec.h  netutils_t.c  netutils_t.h  omsp_validation.c  omsp_validation.h  packet_validation.c  packet_validation.edl  pn_dcp_validation.c  s7commp_validation.c  s7commp_validation.h  sealed_key_file.h  snmp_validation.c  snmp_validation.h  tcp_validation.c  tcp_validation.h  trusted_sock_api.c  trusted_sock_api.h  util_api.c  util_api.h
remote_end/: CMakeLists.txt  bulk_data_server.c  configure_linux_macsec.sh  performance_eval_server.sh  pn_device_simulation.c  remote_end.sh  send_close_receiver.c  simple_http_server.c  snmp_device_simulation.c
support_lib/: interface_connector.c  interface_connector.h  key_installation.c  key_installation.h  lib_ocalls.c  sgx_utils_u.c  sgx_utils_u.h
tests/: CMakeLists.txt  environment_test_app.sh  test_app.sh  test_app_install_keys.sh
tests/test_app/: benchmark_tests.c  benchmark_tests.h  fake_trusted_sock_api.c  test_app.c  test_app.h  test_app_key_installation.c  test_app_launch.c  test_enclave_u.c  test_enclave_u.h  test_pn_dcp.c  test_snmp_client.c
tests/test_enclave/: Makefile  test_enclave.config.xml  test_enclave.edl  test_enclave_t.c  test_enclave_t.h
tests/test_enclave/tests/: bulk_data_client.c  send_close.c  sgx_macsec_raw.c  simple_http_client.c  test_utils.c  test_utils.h
